--- a/GlobalGameJam/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GlobalGameJam/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -199,12 +199,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/GlobalGameJam/Levels/LevelJavi
 
 [ModuleFileTracking]
-GlobalGameJam.TimeStamp=2021.01.29-10.04.14
+GlobalGameJam.TimeStamp=2021.01.29-10.26.13
 GlobalGameJam.LastCompileMethod=Runtime
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
+CleanShutdown=True
+OpenAssetsAtExit=/Game/GlobalGameJam/Blueprints/GlobalGameJamCharacter.GlobalGameJamCharacter
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -862,6 +862,16 @@ FbxImportUI.Transform=True
 FbxImportUI.Miscellaneous=True
 FbxImportUI.Material=True
 FbxImportUI.FbxFileInformation=True
+K2Node_InputAction.Input=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+PropertyWrapper.Events=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/GlobalGameJam/Levels/LevelJavi
@@ -879,13 +889,18 @@ InputSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[22]\" "
+CharacterMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavAgentProps\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -931,6 +946,7 @@ DisplayPaths=False
 DisplayActorsCount=False
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 
 [FBX_Import_UI_Option_FbxImportUI]
@@ -1045,4 +1061,7 @@ bConvertSceneUnit=False
 
 [MessageLog]
 LastLogListing=FBXImport
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 
