--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/GlobalGameJam/Levels/Level1.Level1
+EditorStartupMap=/Game/GlobalGameJam/Levels/Level1.Level1
 GlobalDefaultGameMode="/Script/GlobalGameJam.GlobalGameJamGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
