--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0F7CA7824910A03FC1A402A3023DCD76
 ProjectName=Third Person Game Template
+
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
++StartupMovies=Horny Panda_1
+
