--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0F7CA7824910A03FC1A402A3023DCD76
-ProjectName=Third Person Game Template
+ProjectName=Daedalus Stargazer
+CompanyName=Horny Panda Studios
 
 [/Script/MoviePlayer.MoviePlayerSettings]
 bWaitForMoviesToComplete=False
