--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GlobalGameJam/Levels/Level1.Level1
-EditorStartupMap=/Game/GlobalGameJam/Levels/Level1.Level1
+GameDefaultMap=/Game/GlobalGameJam/Levels/Menu.Menu
+EditorStartupMap=/Game/GlobalGameJam/Levels/Menu.Menu
 GlobalDefaultGameMode="/Script/GlobalGameJam.GlobalGameJamGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
